WIP on lambda evaluator with visitors style

--- a/main.tex
+++ b/main.tex
@@ -444,7 +444,7 @@ method visit_container :
           \end{lstlisting}
 \end{itemize}
 
-
+N.B. visitors has special plugins for open and closed types (See manual part 3.1)
 % \begin{minted}{ocaml}
 % method visit_container :
 % 'env 'a .
