--- a/main.tex
+++ b/main.tex
@@ -52,6 +52,9 @@
                         %% http://ctan.org/pkg/booktabs
 \usepackage{subcaption} %% For complex figures with subfigures/subcaptions
                         %% http://ctan.org/pkg/subcaption
+\usepackage[utf8]{inputenc}
+\usepackage[english,russian]{babel}
+% \usepackage[english]{babel}
 
 \usepackage{amsmath,amssymb}
 \usepackage{listings}
@@ -61,7 +64,7 @@
 
 \lstdefinelanguage{ocaml}{
 keywords={fresh, conde, let, begin, end, in, match, type, and, fun, function, try, with, when, class,
-object, method, of, rec, repeat, until, while, not, do, done, as, val, inherit,
+object, method, of, rec, nonrec, repeat, until, while, not, do, done, as, val, inherit,
 new, module, sig, deriving, datatype, struct, if, then, else, open, private, virtual, include, @type},
 sensitive=true,
 commentstyle=\small\itshape\ttfamily,
@@ -253,24 +256,42 @@ let iter = function A -> () | B x -> iter x;;
 % I_{2,(\underbrace{\scriptstyle3,3,3,3,3}_5)}
 % \]
 
-\begin{lstlisting}
+\begin{lstlisting}[language=ocaml]
 type ($a_1$, ..., $a_n$) typename =
   (* primitive ones *)
   | int | string | ...
+  (* named aliases *)
+  | type_ as 'identifier
   (* constructors of algebraic types *)
   | $C_1$ of $t_{11}$ * ... * $t_{1 n_1}$ | ... | $C_k$ of $t_{k1}$ * ... * $t_{k n_k}$
   (* tuples can be viewed as specific predefined constructors *)
   | ($t_1$, ..., $t_k$)
-  (* polymorphic variants *)
-  | [ `$C_1$ of $t_{11}$ * ... * $t_{1 n_1}$ | ... | `$C_k$ of $t_{k1}$ * ... * $t_{k n_k}$ ]
-  (* type applications *)
+  (* polymorphic variants with concrete constructors  *)
+  | [ `$C_1$ of $t_{11}$ * ... * $t_{1 n_1}$ | ... | `$C_k$ of $t_{k1}$ * ... * $t_{k n_k}$ ] | [ ($t_{1}$,...,$t_{l}$) u ]
+  (* union of polymorphic variants *)
+  | [ ($t_{1}$,...,$t_{l}$) $\tau$ | ... ]
+  (* type abbrevations (a.k.a. type aliases) : application of types to other types *)
   | ($t_1$, ..., $t_n$) $\tau$
 \end{lstlisting}
+Currently \textbf{not} supported:
+\begin{itemize}
+ \item Using object types, module types and functional types in type declarations.
+ \item Constraints on type declrations are not being taken to account
+ \item GADTs are treated as simple algebraic data types.
+ \item Generated code will typecheck only for \textbf{regular} type declarations.
+ \item Type declarations with \verb=nonrec= keyword.
+\end{itemize}
 
 
 \section{What is being generated in general}
 
-For every \lstinline{type ($a_1$, ..., $a_n$) t} we generate:
+Для каждого объявления типа  \lstinline{type ($a_1$, ..., $a_n$) t} генерируются в файле реализации:
+\begin{itemize}
+ \item \textit{Interface class} который определяет тип всех трансформаций, которые могут быть применены для значения типа \lstinline{t}.
+ \item \textit{Generic catamorphism}, который позволяет применить конкретную трансформациюю к значению типа \lstinline{t}.
+\end{itemize},
+а также два соответсвующих объявления в файле сигнатуры.
+
 \begin{itemize}
   \item A class where methods correspond to constructor names. We will call it an \textit{interface class} for \lstinline{t}. For normal and poly variants implementation is strightforward. For other sorts of types call will be populated by inheritance
   \begin{lstlisting}
@@ -418,33 +439,61 @@ We are also able to construct transformation functions for every $b_i$:
 \subsection{Types used in type declaration go out of scope}
 
 \section{Four ways to add types to visitor classes}
-\subsection{Visitors (polymorphic and monomorphic)}
-Monomorphic approach
-\begin{lstlisting}
-method virtual  visit_'a : _
-method visit_container :
-  'env . 'env -> 'a container -> ...
-\end{lstlisting}
-Pros: no need of time annotations
-\begin{lstlisting}
-method visit_container :
-  'env 'a .
-    ('env -> 'a -> ...) ->
-    'env -> 'a container -> ...
-\end{lstlisting}
-\begin{itemize}
- \item Cons: needs type annotations.
- \item Pros: Extra functions allow support of non-regular datatypes.
- \item Cons: doesn't support fold visitor (declaring map using fold).
- \item Pros: composable
- \item Cons: Doesn't work correctly for type t2 in 
-	  \begin{lstlisting}
-          type ('a,'b) t = Foo of 'a * 'b
-          type 'a t2 = ('a, int) t
-          \end{lstlisting}
-\end{itemize}
+\begin{enumerate}
 
-N.B. visitors has special plugins for open and closed types (See manual part 3.1)
+ \item Monomorphic approach (visitors)
+    \begin{lstlisting}
+    method virtual  visit_'a : _
+    method visit_container :
+      'env . 'env -> 'a container -> ...
+    \end{lstlisting}
+    \begin{itemize}
+    \item Pros: Не нужно генерировать аннотации типов, что упрощает генерацию.
+    \item Cons: Некомпозициональны
+    \end{itemize}
+    
+  \item Polymorphic approach (visitors)
+    \begin{lstlisting}
+    method visit_container :
+      'env 'a .
+	('env -> 'a -> ...) ->
+	'env -> 'a container -> ...
+    \end{lstlisting}
+    \begin{itemize}
+    \item Pros: композиционность,  в отличие от (1).
+    \item Pros: Функции, передаваясь в каждый метод явно, позволяют поддержать нерегулярные типы. 
+    (Хотя остается вопрос, зачем тогда универсальная квантификация)
+    \item Cons: Нужны явные аннотации типов.
+    \item Cons: Не поддерживаются для fold в библиотеке visitors (похоже так что-то с типами, в никаких статьях про это вроде не писалось).
+    \item Cons: В некоторых случаях генерируют код, не проходящий проверку типов
+	  \begin{lstlisting}
+	  type ('a,'b) t = Foo of 'a * 'b (* OK *)
+	  type 'a t2 = ('a, int) t    (* compilation error *)
+	  \end{lstlisting}
+	  или пример из руководтсва по библиотеке (глава 3.1 из \cite{visitors_manual})
+	  \begin{lstlisting}
+	  type expr = E of expr oexpr [@@unboxed]
+	  [@@deriving visitors { variety = "map"; polymorphic = true }]
+	  \end{lstlisting}
+	  Для обеих примеров генерируемый код можно исправить руками, потерев унивесальные квантификации методов
+    \end{itemize}
+  \item Polymorphic apprach without universal quantification of methods
+      \begin{lstlisting}
+	method visit_container :
+	    ('env -> 'a -> ...) ->
+	    'env -> 'a container -> ...
+    \end{lstlisting}
+    \begin{itemize}
+    \item Pros: Два примера выше начинают работать.
+    \end{itemize}
+    
+  \item Подход библиотеки Generic Transformes: функции-трансформации для аргументов передаются явно при создании класса.
+    \begin{itemize}
+    \item Cons: не поддерживаются нерегулярные типы
+    \end{itemize}
+    
+\end{enumerate}
+
 % \begin{minted}{ocaml}
 % method visit_container :
 % 'env 'a .
@@ -454,25 +503,7 @@ N.B. visitors has special plugins for open and closed types (See manual part 3.1
 
 \section{xxx}
 \begin{lstlisting}
-   let rec append$^o$ x y xy =
-     (x === nil ()) &&& (y === xy) |||
-     (fresh (h t)
-       (x === h % t) &&&
-       (fresh (ty)
-         (h % ty === xy) &&& (append$^o$ t y ty)
-       )
-     )
-
-   let rec revers$^o$ a b =
-     conde [
-       (a === nil ()) &&& (b === nil ());
-       (fresh (h t)
-         (a === h % t) &&&
-         (fresh (a')
-           (append$^o$ a' !< h b) &&& (revers$^o$ t a')
-         )
-       )
-     ]
+asdf
 \end{lstlisting}
 
 %% Bibliography
